Prevent key values in IP info modal to wrap.

--- a/dropins/ip-info-dropin.css
+++ b/dropins/ip-info-dropin.css
@@ -88,6 +88,10 @@
 	padding: 0;
 }
 
+.SimpleHistoryIpInfoDropin__ipInfoTable__key {
+	white-space: nowrap;
+}
+
 .SimpleHistoryIpInfoDropin__provider {
 	text-align: right;
 	font-size: 12px;
